Sun Feb 21 05:13:53 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

	  Reduced lock scopes; reverted change made in r3050 which
	  prevented the NACK mechanism from triggering properly.

Sun Feb 21 04:44:54 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Corrected locking behavior in start.

Sun Feb 21 02:41:30 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:

          Clarified language concerning color filter ordering.

Sat Feb 20 16:29:31 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/bin/plot-transports-scaling.gp:

          Updated output image size.

Sat Feb 20 04:51:30 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/tools/convert-all:

          Added missing bash interpreter directive.

        * performance-tests/Bench/bin/plot-transports-scaling.gp:
        * performance-tests/Bench/tools/convert-scaling:
        * performance-tests/Bench/tools/plot-scaling.gp:

          Added support for analyzing scaling results.

Sat Feb 20 02:20:54 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * NEWS:

          Updated next release version; updated release notes with recent
          changes to multicast and the transport framework.

        * README:
        * tools/odds_dissector/README:

          Updated next release version.

Sat Feb 20 00:15:10 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * performance-tests/Bench/tests/scaling:
        * performance-tests/Bench/tests/scaling/pub-1.ini:
        * performance-tests/Bench/tests/scaling/pub-2.ini:
        * performance-tests/Bench/tests/scaling/pub-3.ini:
        * performance-tests/Bench/tests/scaling/pub-4.ini:
        * performance-tests/Bench/tests/scaling/pub-5.ini:
        * performance-tests/Bench/tests/scaling/pub-6.ini: